--- a/.github/workflows/ci .yml
+++ b/.github/workflows/ci .yml
@@ -14,17 +14,11 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Setup .NET
-      uses: actions/setup-dotnet@v4
-      with:
-        dotnet-version: 8.0.x
+    uses: actions/setup-dotnet@v4
+    with: dotnet-version: 8.0.x
     - name: Restore the packages
-  run: dotnet restore
-  working-directory: src/MyApp
-
-  - name: Build the solution
-  run: dotnet build --no-restore
-  working-directory: src/MyApp
-
-- name: Run All Tests
-  run: dotnet test --no-build --verbosity normal
-  working-directory: src/MyApp
+    run: dotnet restore
+    - name: Build the solution
+    run: dotnet build --no-restore - name:
+    run All Test 
+    run: dotnet test --no-build --verbosity normal
